--- a/src/DogFacts/DogFacts.css
+++ b/src/DogFacts/DogFacts.css
@@ -1,10 +1,8 @@
-@import url('https://fonts.cdnfonts.com/css/tt-tunnels-trial');
-
 .dog-facts {
-    font-family: 'TT Tunnels Trial', sans-serif;
-    font-size: 2.5rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 3vh;
 }
 
 .did-you-know {
-    font-size: 3.5rem;
+    font-size: 4vh;
 }
